2003-09-04  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgnome-icon-list.c (icon_list_find_icon_from_data): fix wrong
	use of FIX2INT.

2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
	
	* extconf.rb: remove nasty hack by using Dir.entries.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
   * extconf.rb: Exit with 1 when the package is not found.

2003-06-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-pixmap-entry.c: Add Gnome::PixmapEntry#set_preview. 
	* src/rbgnome-client.c: Replace rb_f_lambda() to G_BLOCK_PROC() for ruby-1.8.x.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

   * extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-05-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/test-gnome/color-picker.rb: Follow Ruby/GTK changes(Gtk::Table).

2003-03-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: check popt library

	* extconf.rb: cygwin support

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2003-02-02  KUBO Takehiro  <kubo@jiubao.org>

	* All files: Update copyright notice from LGPL 2.0 to LGPL 2.1.
	* sample/test-gnome/font-picker.rb: use Gtk::Stock.

2002-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome-pixmap-entry.c, rbgnome-icon-entry.c, rbgnome-href.c, 
	rbgnome-font-picker.c, rbgnome-file-entry.c, rbgnome-entry.c, 
	rbgnome-druid.c, rbgnome-druid-page-standard.c, rbgnome-dateedit.c, 
	rbgnome-color-picker.c: Remove property methods(they are autogenerated).
	* src/rbgnome-icon-entry.c: Fix a wrong parameter of Gnome::IconEntry#set_filename.

2002-12-22  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbbonobo*: Move to Ruby/Bonobo.
	* sample/gnome-app-helper.rb: Remove Bonobo::I18n.

2002-12-08  Masao Mutoh <mutoh@highway.ne.jp>

	* extconf.rb: restore previous version.

2002-12-08  Masao Mutoh <mutoh@highway.ne.jp>

	* sample/gnome-app-helper.rb: Follow Ruby/GTK changes.
